--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,3 +1,6 @@
+/* Import Orbitron font from Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap');
+
 /* Gothic 821 Condensed Font */
 @font-face {
     font-family: 'Gothic821 Condensed';
